--- a/kubernetes/contoso-website/templates/ingress.yaml
+++ b/kubernetes/contoso-website/templates/ingress.yaml
@@ -2,12 +2,13 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: contoso-website
-   namespace: {{ default "staging" .Release.Namespace }}
+  namespace: {{ default "staging" .Release.Namespace }}
   annotations:
     kubernetes.io/ingress.class: addon-http-application-routing
 spec:
   rules:
-    - host: contoso-{{ default "staging" .Release.Namespace }}.{{ .Values.dns.name }}
+    - host: contoso.f7925f31cad341e18571.eastus.aksapp.io
+      http:
         paths:
           - backend:
               service:
